Fixed the alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-
-.app{
+body {
+  display: flex;
   height: 100vh;
+  width: 100%;
+  flex-direction: column;
 }
